--- a/10_pandas_cargar_archivos.ipynb
+++ b/10_pandas_cargar_archivos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,18 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/tux/cursos/curso-pandas'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Verify if the code is run as an script or in an interactive environment\n",
     "# Get the current directory\n",
@@ -29,16 +40,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/tux/curso-pandas/datasets/bestsellers.csv'"
+       "'/home/tux/cursos/curso-pandas/datasets/bestsellers.csv'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -50,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +240,7 @@
        "[550 rows x 7 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,16 +252,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/home/tux/curso-pandas/datasets/hpcharacters.json'"
+       "'/home/tux/cursos/curso-pandas/datasets/hpcharacters.json'"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +490,7 @@
        "[1940 rows x 8 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +521,7 @@
        "Length: 1940, dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,18 +541,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Pokemon_path = os.path.join(current_dir, \"datasets\", \"Pokemon_full.csv\")\n",
-    "Diabetes_path = os.path.join(current_dir, \"datasets\", \"Diabetes-Dataset.csv\")\n",
-    "Games_path = os.path.join(current_dir, \"datasets\", \"games.csv\")"
+    "pokemon_path = os.path.join(current_dir, \"datasets\", \"Pokemon_full.csv\")\n",
+    "diabetes_path = os.path.join(current_dir, \"datasets\", \"Diabetes-Dataset.csv\")\n",
+    "games_path = os.path.join(current_dir, \"datasets\", \"games.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -780,31 +791,336 @@
        "[890 rows x 12 columns]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_pokemon = pd.read_csv(Pokemon_path)\n",
+    "df_pokemon = pd.read_csv(pokemon_path)\n",
     "df_pokemon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'games_path' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[41], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m df_games \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(games_path)\n\u001b[1;32m      2\u001b[0m df_games\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'games_path' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Release Date</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Rating</th>\n",
+       "      <th>Times Listed</th>\n",
+       "      <th>Number of Reviews</th>\n",
+       "      <th>Genres</th>\n",
+       "      <th>Summary</th>\n",
+       "      <th>Reviews</th>\n",
+       "      <th>Plays</th>\n",
+       "      <th>Playing</th>\n",
+       "      <th>Backlogs</th>\n",
+       "      <th>Wishlist</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Elden Ring</td>\n",
+       "      <td>Feb 25, 2022</td>\n",
+       "      <td>['Bandai Namco Entertainment', 'FromSoftware']</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>3.9K</td>\n",
+       "      <td>3.9K</td>\n",
+       "      <td>['Adventure', 'RPG']</td>\n",
+       "      <td>Elden Ring is a fantasy, action and open world...</td>\n",
+       "      <td>[\"The first playthrough of elden ring is one o...</td>\n",
+       "      <td>17K</td>\n",
+       "      <td>3.8K</td>\n",
+       "      <td>4.6K</td>\n",
+       "      <td>4.8K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Hades</td>\n",
+       "      <td>Dec 10, 2019</td>\n",
+       "      <td>['Supergiant Games']</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>2.9K</td>\n",
+       "      <td>2.9K</td>\n",
+       "      <td>['Adventure', 'Brawler', 'Indie', 'RPG']</td>\n",
+       "      <td>A rogue-lite hack and slash dungeon crawler in...</td>\n",
+       "      <td>['convinced this is a roguelike for people who...</td>\n",
+       "      <td>21K</td>\n",
+       "      <td>3.2K</td>\n",
+       "      <td>6.3K</td>\n",
+       "      <td>3.6K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>The Legend of Zelda: Breath of the Wild</td>\n",
+       "      <td>Mar 03, 2017</td>\n",
+       "      <td>['Nintendo', 'Nintendo EPD Production Group No...</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>4.3K</td>\n",
+       "      <td>4.3K</td>\n",
+       "      <td>['Adventure', 'RPG']</td>\n",
+       "      <td>The Legend of Zelda: Breath of the Wild is the...</td>\n",
+       "      <td>['This game is the game (that is not CS:GO) th...</td>\n",
+       "      <td>30K</td>\n",
+       "      <td>2.5K</td>\n",
+       "      <td>5K</td>\n",
+       "      <td>2.6K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Undertale</td>\n",
+       "      <td>Sep 15, 2015</td>\n",
+       "      <td>['tobyfox', '8-4']</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.5K</td>\n",
+       "      <td>3.5K</td>\n",
+       "      <td>['Adventure', 'Indie', 'RPG', 'Turn Based Stra...</td>\n",
+       "      <td>A small child falls into the Underground, wher...</td>\n",
+       "      <td>['soundtrack is tied for #1 with nier automata...</td>\n",
+       "      <td>28K</td>\n",
+       "      <td>679</td>\n",
+       "      <td>4.9K</td>\n",
+       "      <td>1.8K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Hollow Knight</td>\n",
+       "      <td>Feb 24, 2017</td>\n",
+       "      <td>['Team Cherry']</td>\n",
+       "      <td>4.4</td>\n",
+       "      <td>3K</td>\n",
+       "      <td>3K</td>\n",
+       "      <td>['Adventure', 'Indie', 'Platform']</td>\n",
+       "      <td>A 2D metroidvania with an emphasis on close co...</td>\n",
+       "      <td>[\"this games worldbuilding is incredible, with...</td>\n",
+       "      <td>21K</td>\n",
+       "      <td>2.4K</td>\n",
+       "      <td>8.3K</td>\n",
+       "      <td>2.3K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1507</th>\n",
+       "      <td>1507</td>\n",
+       "      <td>Back to the Future: The Game</td>\n",
+       "      <td>Dec 22, 2010</td>\n",
+       "      <td>['Telltale Games']</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>94</td>\n",
+       "      <td>94</td>\n",
+       "      <td>['Adventure', 'Point-and-Click']</td>\n",
+       "      <td>Back to the Future: The Game is one of Telltal...</td>\n",
+       "      <td>['Very enjoyable game. The story adds onto the...</td>\n",
+       "      <td>763</td>\n",
+       "      <td>5</td>\n",
+       "      <td>223</td>\n",
+       "      <td>67</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1508</th>\n",
+       "      <td>1508</td>\n",
+       "      <td>Team Sonic Racing</td>\n",
+       "      <td>May 21, 2019</td>\n",
+       "      <td>['Sumo Digital', 'Sega']</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>264</td>\n",
+       "      <td>264</td>\n",
+       "      <td>['Arcade', 'Racing']</td>\n",
+       "      <td>Team Sonic Racing combines the best elements o...</td>\n",
+       "      <td>['jogo morto mas bom', 'not my cup of tea', \"C...</td>\n",
+       "      <td>1.5K</td>\n",
+       "      <td>49</td>\n",
+       "      <td>413</td>\n",
+       "      <td>107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1509</th>\n",
+       "      <td>1509</td>\n",
+       "      <td>Dragon's Dogma</td>\n",
+       "      <td>May 22, 2012</td>\n",
+       "      <td>['Capcom']</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>210</td>\n",
+       "      <td>210</td>\n",
+       "      <td>['Brawler', 'RPG']</td>\n",
+       "      <td>Set in a huge open world, Dragon’s Dogma: Dark...</td>\n",
+       "      <td>['Underrated.', 'A grandes rasgos, es como un ...</td>\n",
+       "      <td>1.1K</td>\n",
+       "      <td>45</td>\n",
+       "      <td>487</td>\n",
+       "      <td>206</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1510</th>\n",
+       "      <td>1510</td>\n",
+       "      <td>Baldur's Gate 3</td>\n",
+       "      <td>Oct 06, 2020</td>\n",
+       "      <td>['Larian Studios']</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>165</td>\n",
+       "      <td>165</td>\n",
+       "      <td>['Adventure', 'RPG', 'Strategy', 'Tactical', '...</td>\n",
+       "      <td>An ancient evil has returned to Baldur's Gate,...</td>\n",
+       "      <td>['Bu türe bu oyunla girmeye çalışmak hataydı s...</td>\n",
+       "      <td>269</td>\n",
+       "      <td>79</td>\n",
+       "      <td>388</td>\n",
+       "      <td>602</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1511</th>\n",
+       "      <td>1511</td>\n",
+       "      <td>The LEGO Movie Videogame</td>\n",
+       "      <td>Feb 04, 2014</td>\n",
+       "      <td>['WB Games', 'TT Fusion']</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>184</td>\n",
+       "      <td>184</td>\n",
+       "      <td>['Adventure', 'Puzzle']</td>\n",
+       "      <td>Join Emmet and an unlikely group of resistance...</td>\n",
+       "      <td>['Legal', 'Pretty Average Lego Game But It Was...</td>\n",
+       "      <td>1.7K</td>\n",
+       "      <td>11</td>\n",
+       "      <td>239</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1512 rows × 14 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Unnamed: 0                                    Title  Release Date   \n",
+       "0              0                               Elden Ring  Feb 25, 2022  \\\n",
+       "1              1                                    Hades  Dec 10, 2019   \n",
+       "2              2  The Legend of Zelda: Breath of the Wild  Mar 03, 2017   \n",
+       "3              3                                Undertale  Sep 15, 2015   \n",
+       "4              4                            Hollow Knight  Feb 24, 2017   \n",
+       "...          ...                                      ...           ...   \n",
+       "1507        1507             Back to the Future: The Game  Dec 22, 2010   \n",
+       "1508        1508                        Team Sonic Racing  May 21, 2019   \n",
+       "1509        1509                           Dragon's Dogma  May 22, 2012   \n",
+       "1510        1510                          Baldur's Gate 3  Oct 06, 2020   \n",
+       "1511        1511                 The LEGO Movie Videogame  Feb 04, 2014   \n",
+       "\n",
+       "                                                   Team  Rating Times Listed   \n",
+       "0        ['Bandai Namco Entertainment', 'FromSoftware']     4.5         3.9K  \\\n",
+       "1                                  ['Supergiant Games']     4.3         2.9K   \n",
+       "2     ['Nintendo', 'Nintendo EPD Production Group No...     4.4         4.3K   \n",
+       "3                                    ['tobyfox', '8-4']     4.2         3.5K   \n",
+       "4                                       ['Team Cherry']     4.4           3K   \n",
+       "...                                                 ...     ...          ...   \n",
+       "1507                                 ['Telltale Games']     3.2           94   \n",
+       "1508                           ['Sumo Digital', 'Sega']     2.9          264   \n",
+       "1509                                         ['Capcom']     3.7          210   \n",
+       "1510                                 ['Larian Studios']     4.1          165   \n",
+       "1511                          ['WB Games', 'TT Fusion']     2.8          184   \n",
+       "\n",
+       "     Number of Reviews                                             Genres   \n",
+       "0                 3.9K                               ['Adventure', 'RPG']  \\\n",
+       "1                 2.9K           ['Adventure', 'Brawler', 'Indie', 'RPG']   \n",
+       "2                 4.3K                               ['Adventure', 'RPG']   \n",
+       "3                 3.5K  ['Adventure', 'Indie', 'RPG', 'Turn Based Stra...   \n",
+       "4                   3K                 ['Adventure', 'Indie', 'Platform']   \n",
+       "...                ...                                                ...   \n",
+       "1507                94                   ['Adventure', 'Point-and-Click']   \n",
+       "1508               264                               ['Arcade', 'Racing']   \n",
+       "1509               210                                 ['Brawler', 'RPG']   \n",
+       "1510               165  ['Adventure', 'RPG', 'Strategy', 'Tactical', '...   \n",
+       "1511               184                            ['Adventure', 'Puzzle']   \n",
+       "\n",
+       "                                                Summary   \n",
+       "0     Elden Ring is a fantasy, action and open world...  \\\n",
+       "1     A rogue-lite hack and slash dungeon crawler in...   \n",
+       "2     The Legend of Zelda: Breath of the Wild is the...   \n",
+       "3     A small child falls into the Underground, wher...   \n",
+       "4     A 2D metroidvania with an emphasis on close co...   \n",
+       "...                                                 ...   \n",
+       "1507  Back to the Future: The Game is one of Telltal...   \n",
+       "1508  Team Sonic Racing combines the best elements o...   \n",
+       "1509  Set in a huge open world, Dragon’s Dogma: Dark...   \n",
+       "1510  An ancient evil has returned to Baldur's Gate,...   \n",
+       "1511  Join Emmet and an unlikely group of resistance...   \n",
+       "\n",
+       "                                                Reviews Plays Playing   \n",
+       "0     [\"The first playthrough of elden ring is one o...   17K    3.8K  \\\n",
+       "1     ['convinced this is a roguelike for people who...   21K    3.2K   \n",
+       "2     ['This game is the game (that is not CS:GO) th...   30K    2.5K   \n",
+       "3     ['soundtrack is tied for #1 with nier automata...   28K     679   \n",
+       "4     [\"this games worldbuilding is incredible, with...   21K    2.4K   \n",
+       "...                                                 ...   ...     ...   \n",
+       "1507  ['Very enjoyable game. The story adds onto the...   763       5   \n",
+       "1508  ['jogo morto mas bom', 'not my cup of tea', \"C...  1.5K      49   \n",
+       "1509  ['Underrated.', 'A grandes rasgos, es como un ...  1.1K      45   \n",
+       "1510  ['Bu türe bu oyunla girmeye çalışmak hataydı s...   269      79   \n",
+       "1511  ['Legal', 'Pretty Average Lego Game But It Was...  1.7K      11   \n",
+       "\n",
+       "     Backlogs Wishlist  \n",
+       "0        4.6K     4.8K  \n",
+       "1        6.3K     3.6K  \n",
+       "2          5K     2.6K  \n",
+       "3        4.9K     1.8K  \n",
+       "4        8.3K     2.3K  \n",
+       "...       ...      ...  \n",
+       "1507      223       67  \n",
+       "1508      413      107  \n",
+       "1509      487      206  \n",
+       "1510      388      602  \n",
+       "1511      239       73  \n",
+       "\n",
+       "[1512 rows x 14 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
